--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <!--
 ================GNU General Public License================================
 
@@ -66,9 +66,10 @@ Environmental damage caused by the use must be kept as small as possible.
 
 
                 <h:form rendered="#{userSession.loggedIn}" styleClass="loggedInHeader"
-                        style="background-image: url('#{userSession.user.gravatarHeaderUrl}')">
+                        style="background-image: url('#{userSession.user.gravatarHeaderUrl49}')">
 
-                    <p:splitButton value="Kontostand: #{userSession.user.balance}" url="/internal/account.xhtml">
+                    <p:splitButton value="Kontostand: #{userSession.user.balance}" url="/internal/account.xhtml"
+                                   onclick="location='/internal/account.xhtml'">
                         <p:menuitem value="Mein Konto" url="/internal/account.xhtml" icon="ui-icon-arrowrefresh-1-w"/>
                         <p:menuitem value="Meine Angebote" url="/impressum.xhtml" icon="ui-icon-close"/>
                         <p:separator/>
