--- a/src/main/webapp/menuDecorator.xhtml
+++ b/src/main/webapp/menuDecorator.xhtml
@@ -28,7 +28,7 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:f="http://java.sun.com/jsf/core">
     <ui:define name="content">
         <div class="container">
-            <div id="mainMenuContainer">
+            <div class="menuContainer">
                 <p:menu id="mainMenu">
 
                     <p:menuitem styleClass="#{userSession.activeMenu('dashboard')}" value="Dashboard"
