--- a/src/main/webapp/internal/offers.xhtml
+++ b/src/main/webapp/internal/offers.xhtml
@@ -28,24 +28,29 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentWithoutMenu">
         <h:form>
-            <p:slideMenu style="width:180px;" model="#{adNavigation.offerNavigation}"/>
+            <div class="menuContainer">
+                <p:slideMenu style="width:180px;" model="#{adNavigation.offerNavigation}"/>
+            </div>
 
-            <h:panelGroup id="toUpdate" layout="block">
-                <p:panel header="#{userSession.selectedAdvertisement.title}" rendered="#{userSession.selectedAdvertisement != null}">
-                    <h:panelGrid columns="2" columnClasses="column" cellpadding="5">
-                        <h:outputText value="User:"/>
-                        <h:panelGroup>
-                            <img src="#{userSession.selectedAdvertisement.owner.gravatarUrl30}"
-                                 alt="avatar #{userSession.selectedAdvertisement.owner.displayName}"/>
-                            <h:outputText value="#{userSession.selectedAdvertisement.owner.id}"/>
-                        </h:panelGroup>
-                        <h:outputText value="Name:"/>
-                        <h:outputText value="#{userSession.selectedAdvertisement.name}"/>
-                        <h:outputText value="Anzeige:"/>
-                        <h:outputText value="#{userSession.selectedAdvertisement.content}"/>
-                    </h:panelGrid>
-                </p:panel>
-            </h:panelGroup>
+            <div id="contentWithMenu">
+                <h:panelGroup id="toUpdate" layout="block">
+                    <p:panel header="#{userSession.selectedAdvertisement.title}"
+                             rendered="#{userSession.selectedAdvertisement != null}">
+                        <h:panelGrid columns="2" columnClasses="column" cellpadding="5">
+                            <h:outputText value="User:"/>
+                            <h:panelGroup>
+                                <img src="#{userSession.selectedAdvertisement.owner.gravatarUrl30}"
+                                     alt="avatar #{userSession.selectedAdvertisement.owner.displayName}"/>
+                                <h:outputText value="#{userSession.selectedAdvertisement.owner.id}"/>
+                            </h:panelGroup>
+                            <h:outputText value="Name:"/>
+                            <h:outputText value="#{userSession.selectedAdvertisement.name}"/>
+                            <h:outputText value="Anzeige:"/>
+                            <h:outputText value="#{userSession.selectedAdvertisement.content}"/>
+                        </h:panelGrid>
+                    </p:panel>
+                </h:panelGroup>
+            </div>
         </h:form>
     </ui:define>
 </ui:composition>
