--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -71,6 +71,8 @@ Environmental damage caused by the use must be kept as small as possible.
                     <p:splitButton value="Kontostand: #{userSession.user.balance}" url="/internal/account.xhtml"
                                    onclick="location='/internal/account.xhtml'">
                         <p:menuitem value="Mein Konto" url="/internal/account.xhtml" icon="ui-icon-pencil"/>
+                        <p:menuitem value="Meine Einstellungen" url="/internal/members/user.xhtml?me=me"
+                                    icon="ui-icon-close"/>
                         <p:menuitem value="Meine Angebote" url="/impressum.xhtml" icon="ui-icon-star"/>
                         <p:separator/>
                         <p:menuitem value="logout" url="/logout/logout.xhtml" icon="ui-icon-power"/>
