--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -73,8 +73,7 @@ Environmental damage caused by the use must be kept as small as possible.
                         <p:menuitem value="Mein Konto" url="/internal/account.xhtml" icon="ui-icon-arrowrefresh-1-w"/>
                         <p:menuitem value="Meine Angebote" url="/impressum.xhtml" icon="ui-icon-close"/>
                         <p:separator/>
-                        <p:menuitem value="logout" actionListener="#{userSession.logout}" icon="ui-icon-extlink"
-                                    ajax="false"/>
+                        <p:menuitem value="logout" url="/logout/logout.xhtml" icon="ui-icon-power"/>
                     </p:splitButton>
                 </h:form>
             </div>
