--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -67,11 +67,11 @@ Environmental damage caused by the use must be kept as small as possible.
 
                 <h:form rendered="#{userSession.loggedIn}" styleClass="loggedInHeader"
                         style="background-image: url('#{userSession.user.gravatarHeaderUrl49}')">
-
+                    <!--ui-icon-arrowthick-2-e-w-->
                     <p:splitButton value="Kontostand: #{userSession.user.balance}" url="/internal/account.xhtml"
                                    onclick="location='/internal/account.xhtml'">
-                        <p:menuitem value="Mein Konto" url="/internal/account.xhtml" icon="ui-icon-arrowrefresh-1-w"/>
-                        <p:menuitem value="Meine Angebote" url="/impressum.xhtml" icon="ui-icon-close"/>
+                        <p:menuitem value="Mein Konto" url="/internal/account.xhtml" icon="ui-icon-pencil"/>
+                        <p:menuitem value="Meine Angebote" url="/impressum.xhtml" icon="ui-icon-star"/>
                         <p:separator/>
                         <p:menuitem value="logout" url="/logout/logout.xhtml" icon="ui-icon-power"/>
                     </p:splitButton>
